syntax = "proto3";

import "google/protobuf/empty.proto";

service ImmVis {
    rpc ListAvailableDatasets(google.protobuf.Empty) returns (AvailableDatasetsList) {};
    rpc LoadDataset(LoadDatasetRequestMessage) returns (DatasetMetadata) {};
}

message AvailableDatasetsList {
    repeated string datasetsPaths = 1;
}

message LoadDatasetRequestMessage {
    string datasetPath = 1;
}

message Column {
    string columnName = 1;
    string type = 2;
}

message DescriptiveStatisticsFeature {
    string name = 1;
    string value = 2;
    string type = 3;
}

message ColumnDescriptiveStatistics {
    Column column = 1;
    repeated DescriptiveStatisticsFeature descriptiveStatisticsFeatures = 2;
}

message DatasetMetadata {
    int32 rowsCount = 1;
    repeated Column columns = 2;
    repeated ColumnDescriptiveStatistics columnsDescriptiveStatistics = 3;
}
